--- a/UI/index.html
+++ b/UI/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="../images/icons/favicon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/69d30456e9.js" crossorigin="anonymous"></script>
+
     <title>Fictional Restaurant</title>
 </head>
 <body>
     <nav id="navbar">
-        
         <ul>
             <li>Home</li>
             <li>Recipes</li>
@@ -19,5 +20,8 @@
         
         <h2>ENJOY YOUR FOOD AT FOODY</h2>
     </nav>
+
+    <i class="fas fa-coffee"></i>
+
 </body>
 </html>
