added images and order buttons to drinks page

--- a/UI/drinks.html
+++ b/UI/drinks.html
@@ -1,48 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../UI/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../UI/styles.css" />
     <title>Foody's drinks</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="all-drinks">
-        <div class="drink">
-            <img src="../images/drinks/green.jpg" alt="Healthy vegetable juice">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+      <div class="drink">
+        <div>
+          <img src="../images/drinks/green.jpg" alt="Healthy vegetable juice" />
         </div>
-        <div class="drink">
-            <img src="../images/drinks/mojito.jpg" alt="mojito">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
         </div>
-        <div class="drink">
-            <img src="../images/drinks/orange.jpg" alt="orange juice">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
         </div>
-        <div class="drink">
-            <img src="../images/drinks/strawberry.jpg" alt="strawberry juice">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+      </div>
+      <div class="drink">
+        <div>
+          <img src="../images/drinks/mojito.jpg" alt="mojito" />
         </div>
-        <div class="drink">
-            <img src="../images/drinks/green.jpg" alt="Healthy vegetable juice">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
         </div>
-        <div class="drink">
-            <img src="../images/drinks/green.jpg" alt="Healthy vegetable juice">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
         </div>
-        <div class="drink">
-            <img src="../images/drinks/green.jpg" alt="Healthy vegetable juice">
-            <p>Specially prepared juice to sooth your throat</p>
-            <button>Order</button>
+      </div>
+      <div class="drink">
+        <div>
+          <img src="../images/drinks/orange.jpg" alt="orange juice" />
         </div>
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
+        </div>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
+        </div>
+      </div>
+      <div class="drink">
+        <div>
+          <img src="../images/drinks/banana.jpg" alt="strawberry juice" />
+        </div>
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
+        </div>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
+        </div>
+      </div>
+      <div class="drink">
+        <div>
+          <img
+            src="../images/drinks/blackcoffee.jpg"
+            alt="Healthy vegetable juice"
+          />
+        </div>
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
+        </div>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
+        </div>
+      </div>
+      <div class="drink">
+        <div>
+          <img
+            src="../images/drinks/expresso.jpg"
+            alt="Healthy vegetable juice"
+          />
+        </div>
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
+        </div>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
+        </div>
+      </div>
+      <div class="drink">
+        <div>
+          <img
+            src="../images/drinks/smoothie.jpg"
+            alt="Healthy vegetable juice"
+          />
+        </div>
+        <div class="drink-price">
+          <p class="price">Ush. 14000</p>
+        </div>
+        <div class="details">
+          <p>Specially prepared juice to sooth your throat</p>
+          <button>Order</button>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
