--- a/UI/drinks.html
+++ b/UI/drinks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../UI/styles.css" />
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
     <title>Foody's drinks</title>
   </head>
   <body>
