--- a/UI/index.html
+++ b/UI/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="../images/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/69d30456e9.js" crossorigin="anonymous"></script>
 
     <title>Fictional Restaurant</title>
@@ -28,13 +28,8 @@
         </div>
         
         <h2>ENJOY YOUR FOOD AT FOODY</h2>
+        <button id="nav-btn">Our Menu</button>
     </nav>
-    <section>
-        <i class="fas fa-coffee icon fa-5x"></i>
-
-    </section>
-
-    <footer></footer>
-
+    
 </body>
 </html>
