--- a/UI/index.html
+++ b/UI/index.html
@@ -77,7 +77,7 @@
         
     </div>
     <footer>
-        <cite>© Copyright 2020</cite>
+        <cite>© 2020 Foody Restaurant</cite>
     </footer>
   </body>
 </html>
