created footer for the page, added cart icon

--- a/UI/drinks.html
+++ b/UI/drinks.html
@@ -8,6 +8,24 @@
     <title>Foody's drinks</title>
   </head>
   <body style="background-color: rgb(230, 224, 224)">
+
+    <header>
+      <nav>
+          <h2>cart</h2>
+
+          <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">about</a></li>
+              <li class="cart">
+                  <a href="cart.html">
+                      <ion-icon name = "basket"></ion-icon><span>0</span>
+                  </a>
+              </li>
+          </ul>
+          
+      </nav> 
+  </header>
+
     <div class="all-drinks">
       <div class="drink">
         <div class="img-div">
@@ -104,5 +122,33 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="footer">
+          <div>
+              <h3>Find us here</h3>
+              <p>Plot 55 Buganda road,</p>
+              <p> Or reach us <a href="#">Here</a></p>
+              <p>Find all the resources</p>
+              <p>And others too here</p>
+          </div>
+  
+          <div>
+              <h3>Careers</h3>
+              <p>Want to join a class of world</p> 
+              <p>class leaders?</p>
+              <p>send your resume</p>
+          </div>
+  
+          <div>
+              <h3>Contact details</h3>
+              <p>Please reach out using our lines</p>
+              <p>+256 704445332</p>
+          </div>
+          <div id="copyright">&copy;2020 Foody's restaurant</div>
+      </div>    
+  </footer>
+
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
   </body>
 </html>
