--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,37 @@
     <title>Fictional Restaurant</title>
 </head>
 <body>
+    <div class = "one">
+        <div class = "slide-container">
+            <div class = "nav-bar">
+                <a href = "#"><i class="fa fa-home" style="font-size: smaller;"></i>HOME</a>
+                <a href = "#"><i class="material-icons" style = "font-size: smaller;">restaurant_menu</i>MENU</a>
+                <a href = "#"><i class='fas fa-gift' style="font-size: smaller;"></i>ABOUT US</a>
+                <a href = "#"><i class='fab fa-servicestack' style="font-size: smaller;"></i>SERVICES</a>
+                <a href = "#"><i class='fas fa-tags' style="font-size: smaller;"></i>RESERVATION</a>
+            </div>
+            <div class = "slide-img">
+                <img src = "https://images.unsplash.com/photo-1476224203421-9ac39bcb3327?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"  width = "100%;" height = "400;">
+            </div>
+            <div class = "slide-img">
+                <img src = "https://images.unsplash.com/photo-1432139555190-58524dae6a55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"   width = "100%;" height = "400;">
+            </div>
+            <div class = "slide-img">
+                <img src = "https://images.unsplash.com/photo-1460306855393-0410f61241c7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"  width = "100%;" height = "400;">
+            </div>
+            <div class = "slide-img">
+                <img src = "https://images.unsplash.com/photo-1504113888839-1c8eb50233d3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"  width = "100%;" height = "400;">
+            </div>
+            <div class = "slide-img">
+                <img src = "https://images.unsplash.com/photo-1470124182917-cc6e71b22ecc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"  width = "100%;" height = "400;">
+            </div>
+            
+        </div>
     
+        <div class = "bg-content">
+            <button type = "button">OUR MENU</button>
+        </div>
+    </div>
+        <script src = "app.js"></script>
 </body>
 </html>
